<!--
  Copyright 2020 Paul Cutter

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0>

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>
  <string name="app_name">True Alarm</string>
  <string name="title_activity_main">MainActivity</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>
  <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
  <string name="hello_dashboard_second">Hello HomeSecondFragment. Arg: %1$s</string>
  <string name="hello_notifications_second">Hello HomeSecondFragment. Arg: %1$s</string>
  <string name="title_home">Home</string>

  <string name="permissions_dialog_title">Permissions Info</string>

  <!--
    Permission rationales, each named using the lowercase version of the permission name, followed
    by "_explanation". If the explanation is absent for a given permission, the permission name is
    displayed as the rationale.
  -->
  <string name="internet_explanation">This app needs to access the internet because &#x2026;</string>
  <string name="read_contacts_explanation">This app uses your contacts, to &#x2026;</string>
  <string name="read_external_storage_explanation">This app needs to read external files, in order to &#x2026;</string>
  <string name="access_fine_location_explanation">This app uses your location info to &#x2026;</string>


  <string name="home_second">Home Second</string>

  <string name="settings_title">Settings</string>
  <string name="snooze_title">Snooze</string>
  <string name="alarm_tone_title">Alarm Tone</string>
  <string name="traffic_mode_title">Traffic Mode</string>
  <string name="alarm_nav">Alarms</string>
  <string name="detail_nav">Details</string>
  <string name="settings_nav">Settings</string>
  <string name="alarm_title">ALARMS</string>
  <string name="title_alarm_details">Alarm Details</string>
  <string name="title_settings">Settings</string>
  <string name="alarm1_wake_time">8:30 AM</string>
  <string name="edit_alarms">EDIT</string>
  <string name="create_alarm">SAVE</string>
  <string name="new_name">NAME</string>
  <string name="select_arrival_time">Set Arrival Time</string>
  <string name="buffer_time_title">Buffer Time</string>
  <string name="depart_title">Depart:</string>
  <string name="arrival_title">Arrive:</string>
  <string name="depart_address_prompt">Type In Your Departing Address</string>
  <string name="est_commute_title">Est. Drive\n Time:</string>
  <string name="est_commute_time">43 Minutes</string>
  <string name="buffer_hint">ENTER MIN</string>
  <string name="your_estimate_commute_time_is">Your Estimate Commute Time Is:</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="arrival_time">Arrival Time</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string-array name="alarms_array">
    <item>Alarm 1</item>
    <item>Alarm 2</item>
    <item>Alarm 3</item>
  </string-array>


</resources>
