<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2020 Paul Cutter

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0>

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".controller.ui.alarmdetail.AlarmDetailFragment">


<FrameLayout
  android:id="@+id/map_container"
  android:layout_width="match_parent"
  android:layout_height="0dp"
  app:layout_constraintStart_toStartOf="parent"
  app:layout_constraintEnd_toEndOf="parent"
  app:layout_constraintTop_toTopOf="parent"
  app:layout_constraintBottom_toTopOf="@id/guideline">

  <com.google.android.gms.maps.MapView
    android:id="@+id/route_map"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>

</FrameLayout>

  <TextView
    android:id="@+id/depart_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/depart_title"
    android:textAlignment="center"
    android:textSize="15sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@id/guideline"
    android:layout_marginTop="20dp"
    android:layout_marginStart="8dp"/>

  <EditText
    android:id="@+id/depart_address"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toEndOf="@id/depart_title"
    app:layout_constraintTop_toBottomOf="@id/guideline"
    android:layout_marginTop="8dp"
    android:hint="@string/depart_address_prompt"
    android:textSize="15sp"/>

  <EditText
    android:id="@+id/arrival_address"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toEndOf="@id/arrive_title"
    app:layout_constraintTop_toBottomOf="@id/depart_address"
    android:hint="@string/depart_address_prompt"
    android:textSize="15sp"/>

  <TextView
    android:id="@+id/est_commute_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/est_commute_time"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="5dp"
    android:textSize="15sp"
    android:text="@string/est_commute_title"/>

  <EditText
    android:id="@+id/est_commute_time"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/save"
    app:layout_constraintTop_toTopOf="@id/guideline"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
    android:textSize="15sp"
    android:text="@string/est_commute_time"/>


  <TextView
    android:id="@+id/arrive_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/arrival_title"
    android:textAlignment="center"
    android:textSize="15sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/depart_title"
    android:layout_marginTop="20dp"
    android:layout_marginStart="8dp"/>



  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/arrival_time_layout"
    android:layout_width="0dp"
    app:layout_constraintWidth_percent="0.5"
    android:layout_height="wrap_content"
    app:hintEnabled="true"
    app:hintAnimationEnabled="true"
    android:hint="@string/arrival_time"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/arrival_address"
    app:layout_constraintBottom_toTopOf="@id/buffer_time_title"
    >

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/arrival_time_selected"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="5dp"
      android:layout_marginBottom="5dp"
      android:textSize="15sp"
      android:inputType="time"
      android:editable="false"
      android:focusable="false"
      android:focusableInTouchMode="false"
      android:cursorVisible="false"
      android:clickable="true"
      android:drawableEnd="@drawable/ic_alarm"
     />
  </com.google.android.material.textfield.TextInputLayout>

  <TextView
    android:id="@+id/buffer_time_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:text="@string/buffer_time_title"
    android:textAlignment="center"
    android:textSize="15sp"
    app:layout_constraintBottom_toTopOf="@id/buffer_minutes_selected"
    app:layout_constraintStart_toStartOf="parent"/>


  <EditText
    android:id="@+id/buffer_minutes_selected"
    android:layout_width="wrap_content"
    android:layout_height="65dp"
    android:layout_marginStart="10dp"
    android:textSize="20sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toTopOf="@id/edit_name"
    app:layout_constraintTop_toBottomOf="@id/arrival_time_layout"
    android:hint="@string/buffer_hint"
    android:inputType="number"
    android:layout_marginBottom="8dp"/>

  <EditText
    android:id="@+id/edit_name"
    android:layout_width="130dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:layout_marginStart="15dp"
    android:hint="@string/new_name"
    android:textAlignment="center"
    android:textSize="20sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>

  <Button
    android:id="@+id/save"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:layout_marginEnd="15dp"
    android:text="@string/create_alarm"
    android:textAlignment="center"
    android:textSize="20sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.35"/>

</androidx.constraintlayout.widget.ConstraintLayout>