<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright 2020 Paul Cutter

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0>

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/navigation_home">

  <fragment
    android:id="@+id/navigation_home"
    android:label="@string/title_home"
    android:name="edu.cnm.deepdive.truealarm.controller.ui.home.HomeFragment"
    tools:layout="@layout/fragment_home">

    <action
      android:id="@+id/edit_details"
      app:destination="@id/navigation_alarm_detail">
      <argument
        android:name="alarmId"
        app:argType="long"
        android:defaultValue="0L"/>
    </action>

  </fragment>

  <fragment
    android:id="@+id/navigation_alarm_detail"
    android:label="@string/title_alarm_details"
    android:name="edu.cnm.deepdive.truealarm.controller.ui.alarmdetail.AlarmDetailFragment"
    tools:layout="@layout/fragment_alarm_detail">

    <argument
      android:name="alarmId"
      app:argType="long"
      android:defaultValue="0L"/>

    <action
      android:id="@+id/return_home"
      app:destination="@id/navigation_home"/>

  </fragment>

  <fragment
    android:id="@+id/navigation_settings"
    android:label="@string/title_settings"
    android:name="edu.cnm.deepdive.truealarm.controller.ui.settings.SettingsFragment"
    tools:layout="@layout/fragment_settings"/>
</navigation>