<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".controller.ui.settings.SettingsFragment">


  <Spinner
    android:id="@+id/alarms_spinner"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/settings_title"
    android:layout_marginTop="10dp"/>



  <TextView
    android:id="@+id/settings_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:textAlignment="center"
    android:textSize="35sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:text="@string/settings_title"/>


  <androidx.appcompat.widget.Toolbar
    android:id="@+id/snooze_toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginTop="40dp"
    app:layout_constraintTop_toBottomOf="@id/alarms_spinner">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:textSize="30sp"
      android:text="@string/snooze_title"/>

    <ToggleButton
      android:id="@+id/snooze_toggle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>


  </androidx.appcompat.widget.Toolbar>

  <androidx.appcompat.widget.Toolbar
    android:id="@+id/ringtone_toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginTop="10dp"
    app:layout_constraintTop_toBottomOf="@id/snooze_toolbar">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:textSize="30sp"
      android:text="@string/alarm_tone_title"/>

    <Spinner
      android:id="@+id/ringtone_spinner"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>


  </androidx.appcompat.widget.Toolbar>

  <androidx.appcompat.widget.Toolbar
    android:id="@+id/traffic_mode_toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginTop="10dp"
    app:layout_constraintTop_toBottomOf="@id/ringtone_toolbar">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:textSize="30sp"
      android:text="@string/traffic_mode_title"/>

    <Spinner
      android:id="@+id/traffic_mode_spinner"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>


  </androidx.appcompat.widget.Toolbar>

  <com.google.android.material.bottomnavigation.BottomNavigationView
    android:id="@+id/nav_view"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="0dp"
    android:layout_marginEnd="0dp"
    android:background="?android:attr/windowBackground"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:menu="@menu/bottom_nav_menu"/>

</androidx.constraintlayout.widget.ConstraintLayout>